syntax = "proto3";

option csharp_namespace = "eDoxa.Stripe";

package edoxa.stripe;

message StripeOptions {
  string apiKey = 1;
  InvoiceOptions invoice = 2;
  PaymentMethodOptions paymentMethod = 3;
  
  message InvoiceOptions {
    string currency = 1;
    repeated string taxRates = 2;
  }

  message PaymentMethodOptions {
    CardOptions card = 1;
    
    message CardOptions {
      int32 limit = 1;
    }
  }
}